--- a/src/auth_config.json
+++ b/src/auth_config.json
@@ -1,5 +1,6 @@
 {
   "domain": "fooddecider.eu.auth0.com",
-  "clientId": "Nzs4b0buC953FYZLiVARTC3xldkVW7Yu"
+  "clientId": "Nzs4b0buC953FYZLiVARTC3xldkVW7Yu",
+  "audience": "https://api.fooddecider.com"
 }
 
