--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "fooddecider",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.5.0",
     "@blueprintjs/core": "^3.19.1",
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "jwks-rsa": "^1.6.0",
     "normalize.css": "^8.0.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -12,10 +16,13 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "client:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node server",
+    "server:dev": "nodemon server",
+    "dev": "npm-run-all --parallel client:dev server:dev"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4",
+    "npm-run-all": "^4.1.5"
   }
 }
