--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "eject": "react-scripts eject",
     "server": "node server",
     "server:dev": "nodemon server",
-    "dev": "npm-run-all --parallel client:dev server:dev"
+    "db:dev": "json-server --watch server/db.json --port 3002",
+    "dev": "npm-run-all --parallel client:dev server:dev db:dev"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "json-server": "^0.15.1",
     "nodemon": "^1.19.4",
     "npm-run-all": "^4.1.5"
   }
