--- a/package.json
+++ b/package.json
@@ -40,8 +40,16 @@
     ]
   },
   "devDependencies": {
+    "husky": "^3.1.0",
     "json-server": "^0.15.1",
     "nodemon": "^1.19.4",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
