--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.5.0",
     "@blueprintjs/core": "^3.19.1",
+    "@blueprintjs/icons": "^3.12.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "jwks-rsa": "^1.6.0",
@@ -13,7 +14,6 @@
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0"
   },
